<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 普通菜单项 -->
    <item android:id="@+id/context_open"
        android:title="@string/menu_open" />
    <item android:id="@+id/context_copy"
        android:title="@string/menu_copy" />
    <item android:id="@+id/context_delete"
        android:title="@string/menu_delete" />

    <!-- 分类菜单项 -->
    <item android:id="@+id/menu_category_study"
        android:title="@string/menu_category_study"
        android:icon="@drawable/ic_category_study"/>
    <item android:id="@+id/menu_category_life"
        android:title="@string/menu_category_life"
        android:icon="@drawable/ic_category_life"/>
    <item android:id="@+id/menu_category_task"
        android:title="@string/menu_category_task"
        android:icon="@drawable/ic_category_task"/>
</menu>
